@@ -20,7 +20,6 @@ lib/Muldis/D/Ext/Set.pod
 lib/Muldis/D/Ext/Spatial.pod
 lib/Muldis/D/Ext/Temporal.pod
 lib/Muldis/D/Ext/Text.pod
-lib/Muldis/D/Hierarchical.pod
 lib/Muldis/D/SeeAlso.pod
 LICENSE/GPL
 Makefile.PL
