@@ -38,13 +38,13 @@ documents that comprise the remaining parts of the specification, in their
 suggested reading order (but that all follow the root), are:
 L<Muldis::D::Basics>, L<Muldis::D::Core> (which has its own tree of parts
 to follow), L<Muldis::D::Dialect::PTMD_Tiny>,
-L<Muldis::D::Dialect::HDMD_Perl_Tiny>, L<Muldis::D::Hierarchical>,
-L<Muldis::D::Conventions>, L<Muldis::D::Ext::Ordered>,
-L<Muldis::D::Ext::Integer>, L<Muldis::D::Ext::Blob>,
-L<Muldis::D::Ext::Text>, L<Muldis::D::Ext::Nonscalar>,
-L<Muldis::D::Ext::Set>, L<Muldis::D::Ext::Sequence>,
-L<Muldis::D::Ext::Bag>, L<Muldis::D::Ext::Rational>,
-L<Muldis::D::Ext::Temporal>, L<Muldis::D::Ext::Spatial>.
+L<Muldis::D::Dialect::HDMD_Perl_Tiny>, L<Muldis::D::Conventions>,
+L<Muldis::D::Ext::Ordered>, L<Muldis::D::Ext::Integer>,
+L<Muldis::D::Ext::Blob>, L<Muldis::D::Ext::Text>,
+L<Muldis::D::Ext::Nonscalar>, L<Muldis::D::Ext::Set>,
+L<Muldis::D::Ext::Sequence>, L<Muldis::D::Ext::Bag>,
+L<Muldis::D::Ext::Rational>, L<Muldis::D::Ext::Temporal>,
+L<Muldis::D::Ext::Spatial>.
 
 =head1 DESCRIPTION
 
@@ -254,8 +254,7 @@ code's behavior.
 See the following parts of the current multi-document for descriptions of
 bundled dialects (names subject to change):
 L<Muldis::D::Dialect::PTMD_Tiny>,
-L<Muldis::D::Dialect::HDMD_Perl_Tiny>,
-L<Muldis::D::Hierarchical>.
+L<Muldis::D::Dialect::HDMD_Perl_Tiny>.
 
 =head2 Extensions
 
