@@ -460,9 +460,8 @@ writing code in the host language.
 
 Some official Muldis D dialects have their specifications bundled with the
 current multi-document: L<Muldis::D::Dialect::PTMD_Tiny>,
-L<Muldis::D::Dialect::HDMD_Perl_Tiny>, L<Muldis::D::Hierarchical>.  Other,
-unofficial Muldis D dialects may be made by third parties in the future,
-but none are currently known.
+L<Muldis::D::Dialect::HDMD_Perl_Tiny>.  Other, unofficial Muldis D dialects
+may be made by third parties in the future, but none are currently known.
 
 The other parts of the current multi-document generally focus on the
 behaviours and semantic features of Muldis D, rather than its syntax, and
