@@ -6,6 +6,11 @@
     * Muldis::D version 0.27.0 is released on CPAN as
     Muldis-D-0.27.0.tar.gz.
 
+    * Removed the file Hierarchical.pod, as it has become more superfluous
+    given the other Tiny dialects becoming more terse and better for
+    regular use.  Not that other dialects can't be introduced later, but
+    they aren't as necessary now.
+
     * New file versions are: D.pm 0.27.0 and Types_Catalog.pod 0.24.0 and
     Basics.pod 0.20.0 and PTMD_Tiny.pod 0.19.0 and HDMD_Perl_Tiny.pod
     0.16.0.  The other pre-existing versioned files are unchanged.
